split out media aggregators (#267)
Reviewed-on: http://gitea/kwkaiser/homelab-application/pulls/267
Co-authored-by: karl@kwkaiser.io <karl@kwkaiser.io>
Co-committed-by: karl@kwkaiser.io <karl@kwkaiser.io>

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -44,3 +44,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/miniflux
     condition: miniflux.enabled
+
+  # Media (Radarr, Sonarr, Prowlarr)
+  - name: media
+    version: "0.1.0"
+    repository: file://./helmcharts/media
+    condition: media.enabled
