--- a/helmcharts/media/templates/radarr/svc.yaml
+++ b/helmcharts/media/templates/radarr/svc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sonarr
+  name: radarr
 spec:
   selector:
-    app: sonarr
-    app.kubernetes.io/name: sonarr
+    app: radarr
+    app.kubernetes.io/name: radarr
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8989
+      targetPort: 7878
+
