--- a/helmcharts/media/templates/sonarr/svc.yaml
+++ b/helmcharts/media/templates/sonarr/svc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: radarr
+  name: sonarr
 spec:
   selector:
-    app: radarr
-    app.kubernetes.io/name: radarr
+    app: sonarr
+    app.kubernetes.io/name: sonarr
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 7878
+      targetPort: 8989
+
