--- a/Chart.yaml
+++ b/Chart.yaml
@@ -50,3 +50,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/media
     condition: media.enabled
+
+  # Observability (Prometheus, Grafana, Loki, Promtail)
+  - name: observability
+    version: "0.1.0"
+    repository: file://./helmcharts/observability
+    condition: observability.enabled
