--- a/helmcharts/observability/templates/grafana/svc.yaml
+++ b/helmcharts/observability/templates/grafana/svc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: loki
+  name: grafana
 spec:
   selector:
-    app: loki
-    app.kubernetes.io/name: loki
+    app: grafana
+    app.kubernetes.io/name: grafana
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3100
+      targetPort: 3000
+
