--- a/helmcharts/observability/templates/loki/svc.yaml
+++ b/helmcharts/observability/templates/loki/svc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana
+  name: loki
 spec:
   selector:
-    app: grafana
-    app.kubernetes.io/name: grafana
+    app: loki
+    app.kubernetes.io/name: loki
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3000
+      targetPort: 3100
+
