--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -2,10 +2,6 @@ image_jellyfin: "linuxserver/jellyfin:10.10.7"
 image_wireguard: "linuxserver/wireguard:1.0.20210914-legacy"
 image_qbittorrent: "linuxserver/qbittorrent:5.0.1"
 image_calibre_web: "linuxserver/calibre-web:0.6.25"
-image_prometheus: "bitnami/prometheus:3.5.0"
-image_grafana: "grafana/grafana:11.6.6"
-image_promtail: "grafana/promtail:3.6.2"
-image_loki: "grafana/loki:3.5.8"
 image_borgmatic: "b3vis/borgmatic:2.0.11"
 image_thelounge: "linuxserver/thelounge:4.4.3-next"
 image_syncthing: "linuxserver/syncthing:1.30.0"
@@ -66,3 +62,13 @@ _media: &media_values
 <<: *media_values
 media:
   <<: *media_values
+
+## Observability values
+_observability: &observability_values
+  image_prometheus: "prom/prometheus:v2.54.0"
+  image_grafana: "grafana/grafana:11.6.6"
+  image_promtail: "grafana/promtail:3.6.2"
+  image_loki: "grafana/loki:3.5.8"
+<<: *observability_values
+observability:
+  <<: *observability_values
