u/kwkaiser/fractionlized-deployments-8 (#269)
Reviewed-on: http://gitea/kwkaiser/homelab-application/pulls/269
Co-authored-by: karl@kwkaiser.io <karl@kwkaiser.io>
Co-committed-by: karl@kwkaiser.io <karl@kwkaiser.io>

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -56,3 +56,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/observability
     condition: observability.enabled
+
+  # VPN (WireGuard, qBittorrent, TheLounge, Kasm)
+  - name: vpn
+    version: "0.1.0"
+    repository: file://./helmcharts/vpn
+    condition: vpn.enabled
