--- a/helmcharts/syncthing/templates/depl.yaml
+++ b/helmcharts/syncthing/templates/depl.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: calibre-web
+  name: syncthing
 spec:
   selector:
     matchLabels:
-      app: calibre-web
+      app: syncthing
   replicas: 1
   template:
     metadata:
       labels:
-        app: calibre-web
-        app.kubernetes.io/name: calibre-web
+        app: syncthing
+        app.kubernetes.io/name: syncthing
     spec:
       volumes:
         - name: data
@@ -19,10 +19,10 @@ spec:
             claimName: bulk-nfs
 
       containers:
-        - name: calibre-web
-          image: {{ .Values.image_calibre_web }}
+        - name: syncthing
+          image: {{ .Values.image_syncthing }}
           ports:
-            - containerPort: 8083
+            - containerPort: 8384
 
           env:
             - name: PUID
@@ -31,14 +31,12 @@ spec:
             - name: PGID
               value: "0"
 
-            - name: DOCKER_MODS
-              value: linuxserver/mods:universal-calibre
-
           volumeMounts:
             - name: data
               mountPath: /config
-              subPath: application/calibre-web
+              subPath: application/syncthing/config
 
             - name: data
-              mountPath: /books
-              subPath: shared/books
+              mountPath: /data
+              subPath: application/syncthing/data
+
