--- a/values/dev.yaml
+++ b/values/dev.yaml
@@ -1,24 +1,14 @@
 ## Global values
-_global: &global_values
+global:
   domainName: kwkaiser-test
   tld: io
-<<: *global_values
-global:
-  <<: *global_values
 
 ## Storage related values
-_storage: &storage_values
+storage:
+  enabled: true
   nfsArray: "10.0.2.15"
   volBulkSize: 1Gi
   volCacheSize: 1Gi
-<<: *storage_values
-storage:
-  <<: *storage_values
-  enabled: true
-
-piracyIp: "143.244.47.73"
-promHosts: ["10.0.2.15:9100"]
-backupName: dev-backup
 
 core:
   enabled: true
@@ -45,3 +35,18 @@ observability:
 vpn:
   enabled: false
   qbittorrentIp: "143.244.47.73"
+
+borgmatic:
+  enabled: false
+
+calibre-web:
+  enabled: false
+
+jellyfin:
+  enabled: false
+
+minecraft:
+  enabled: false
+
+syncthing:
+  enabled: false
