--- a/helmcharts/core/config/nginx/conf.d/tv.conf
+++ b/helmcharts/core/config/nginx/conf.d/tv.conf
@@ -10,15 +10,20 @@ server {
   include authelia-location.conf;
 
   location / {
+
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
     set $sonarr_upstream http://sonarr.default.svc.cluster.local;
     proxy_pass $sonarr_upstream;
+
+    # include authentik-location.conf;
   }
 
   location ~ (/sonarr)?/api {
     set $sonarr_upstream http://sonarr.default.svc.cluster.local;
     proxy_pass $sonarr_upstream;
   }
+
+  # include authentik-proxy.conf;
 }
