--- a/helmcharts/borgmatic/config/borgmatic/config.yaml
+++ b/helmcharts/borgmatic/config/borgmatic/config.yaml
@@ -12,6 +12,7 @@ source_directories:
   - /bulk/application/immich/media
   - /bulk/application/mealie/app
   - /bulk/application/syncthing
+  - /bulk/application/authentik
   - /bulk/shared/books
 
 postgresql_databases:
@@ -37,6 +38,12 @@ postgresql_databases:
     hostname: mealiedb
     username: postgres
     password: ${MEALIE_DB_PASSWORD}
+    format: tar
+
+  - name: postgres
+    hostname: authentikdb
+    username: postgres
+    password: ${AUTHENTIK_DB_PASSWORD}
     format: tar
 
 # Retention
