--- a/values/dev.yaml
+++ b/values/dev.yaml
@@ -13,6 +13,30 @@ storage:
 core:
   enabled: true
 
+authentik:
+  enabled: true
+  authentik:
+    secret_key: "PleaseGenerateASecureKey"
+    # This sends anonymous usage-data, stack traces on errors and
+    # performance data to sentry.io, and is fully opt-in
+    error_reporting:
+      enabled: true
+    postgresql:
+      password: "ThisIsNotASecurePassword"
+
+  server:
+    ingress:
+      # Specify kubernetes ingress controller class name
+      ingressClassName: nginx
+      enabled: true
+      hosts:
+        - authentik.kwkaiser-test.io
+
+  postgresql:
+    enabled: true
+    auth:
+      password: "ThisIsNotASecurePassword"
+
 gitea:
   enabled: false
 
@@ -26,7 +50,7 @@ miniflux:
   enabled: false
 
 media:
-  enabled: false
+  enabled: true
 
 observability:
   enabled: false
