--- a/helmcharts/core/config/nginx/conf.d/tv.conf
+++ b/helmcharts/core/config/nginx/conf.d/tv.conf
@@ -7,17 +7,17 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
-  # include authelia-location.conf;
+  include authelia-location.conf;
 
   location / {
 
-    # include authelia-proxy.conf;
-    # include authelia-endpoint.conf;
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
 
     set $sonarr_upstream http://sonarr.default.svc.cluster.local;
     proxy_pass $sonarr_upstream;
 
-    include authentik-location.conf;
+    # include authentik-location.conf;
   }
 
   location ~ (/sonarr)?/api {
@@ -25,5 +25,5 @@ server {
     proxy_pass $sonarr_upstream;
   }
 
-  include authentik-proxy.conf;
+  # include authentik-proxy.conf;
 }
