--- a/helmcharts/core/config/nginx/conf.d/movies.conf
+++ b/helmcharts/core/config/nginx/conf.d/movies.conf
@@ -7,18 +7,18 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
-  include authelia-location.conf;
 
   location / {
-    include authelia-proxy.conf;
-    include authelia-endpoint.conf;
-
     set $radarr_upstream http://radarr.default.svc.cluster.local;
     proxy_pass $radarr_upstream;
+
+    include authentik-location.conf;
   }
 
   location ~ (/radarr)?/api {
     set $radarr_upstream http://radarr.default.svc.cluster.local;
     proxy_pass $radarr_upstream;
   }
+
+  include authentik-proxy.conf;
 }
