--- a/values/dev.yaml
+++ b/values/dev.yaml
@@ -13,29 +13,11 @@ storage:
 core:
   enabled: true
 
-authentik:
+dashy:
   enabled: true
-  authentik:
-    secret_key: "PleaseGenerateASecureKey"
-    # This sends anonymous usage-data, stack traces on errors and
-    # performance data to sentry.io, and is fully opt-in
-    error_reporting:
-      enabled: true
-    postgresql:
-      password: "ThisIsNotASecurePassword"
 
-  server:
-    ingress:
-      # Specify kubernetes ingress controller class name
-      ingressClassName: nginx
-      enabled: true
-      hosts:
-        - authentik.kwkaiser-test.io
-
-  postgresql:
-    enabled: true
-    auth:
-      password: "ThisIsNotASecurePassword"
+authentik:
+  enabled: false
 
 gitea:
   enabled: false
