Use authentik auth for lib

--- a/helmcharts/core/config/nginx/conf.d/lib.conf
+++ b/helmcharts/core/config/nginx/conf.d/lib.conf
@@ -5,11 +5,8 @@ server {
  
   client_max_body_size 100M;
 
-  include authelia-location.conf;
-
   location / { 
-    include authelia-proxy.conf;
-    include authelia-endpoint.conf;
+    include authentik-location.conf;
 
     proxy_set_header        Host            $http_host;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -45,4 +42,6 @@ server {
     set $calibre_upstream   http://calibre-web.default.svc.cluster.local;
     proxy_pass              $calibre_upstream;
   }
+
+  include authentik-proxy.conf;
 }
