--- a/helmcharts/core/config/nginx/conf.d/sync.conf
+++ b/helmcharts/core/config/nginx/conf.d/sync.conf
@@ -7,13 +7,14 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
-  include authelia-location.conf;
 
   location / {
-    include authelia-proxy.conf;
-    include authelia-endpoint.conf;
-
     set $syncthing_upstream http://syncthing.default.svc.cluster.local;
     proxy_pass $syncthing_upstream;
+
+
+    include authentik-location.conf;
   }
+
+  include authentik-proxy.conf;
 }
