--- a/helmcharts/observability/config/grafana/config.ini
+++ b/helmcharts/observability/config/grafana/config.ini
@@ -51,7 +51,7 @@ domain = localhost
 enforce_domain = false
 
 # The full public facing url
-root_url = %(protocol)s://%(domain)s:%(http_port)s/
+root_url = "https://stats.{{ .Values.global.domainName }}.{{ .Values.global.tld }}"
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 serve_from_sub_path = false
@@ -538,7 +538,7 @@ signout_redirect_url =
 # Set to true to attempt login with OAuth automatically, skipping the login screen.
 # This setting is ignored if multiple OAuth providers are configured.
 # Deprecated, use auto_login option for specific provider instead.
-oauth_auto_login = false
+oauth_auto_login = true
 
 # OAuth state max age cookie duration in seconds. Defaults to 600 seconds.
 oauth_state_cookie_max_age = 600
@@ -1711,3 +1711,14 @@ hidden_toggles =
 
 # Disables updating specific feature toggles in the feature management page
 read_only_toggles =
+
+[auth.generic_oauth]
+enabled = true
+scopes = openid profile email
+name = authentik
+auth_url = "https://authentik.{{ .Values.global.domainName }}.{{ .Values.global.tld }}/application/o/authorize/"
+token_url = "http://authentik-server.default.svc.cluster.local/application/o/token/"
+api_url = "http://authentik-server.default.svc.cluster.local/application/o/userinfo/"
+redirect_url = "https://authentik.{{ .Values.global.domainName }}.{{ .Values.global.tld }}/application/o/grafana/end-session/"
+
+tls_skip_verify_insecure = true
