--- a/helmcharts/observability/config/grafana/config.ini
+++ b/helmcharts/observability/config/grafana/config.ini
@@ -1720,5 +1720,6 @@ auth_url = "https://authentik.{{ .Values.global.domainName }}.{{ .Values.global.
 token_url = "http://authentik-server.default.svc.cluster.local/application/o/token/"
 api_url = "http://authentik-server.default.svc.cluster.local/application/o/userinfo/"
 redirect_url = "https://authentik.{{ .Values.global.domainName }}.{{ .Values.global.tld }}/application/o/grafana/end-session/"
+role_attribute_path = "contains(groups[*], 'grafana-admin') && 'Admin' || 'Viewer'"
 
 tls_skip_verify_insecure = true
