--- a/helmcharts/core/templates/dns-poll/cron.yaml
+++ b/helmcharts/core/templates/dns-poll/cron.yaml
@@ -4,7 +4,7 @@ kind: CronJob
 metadata:
   name: dns-poll
 spec:
-  schedule: "0 * * * *"
+  schedule: "0 */12 * * *"
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
