--- a/Chart.yaml
+++ b/Chart.yaml
@@ -97,3 +97,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/syncthing
     condition: syncthing.enabled
+
+  # Actual budget (Budget tracking)
+  - name: actual-budget
+    version: "0.1.0"
+    repository: file://./helmcharts/actual-budget
+    condition: actual-budget.enabled
