--- a/helmcharts/core/config/nginx/conf.d/budget.conf
+++ b/helmcharts/core/config/nginx/conf.d/budget.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name sync.*;
+  server_name budget.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
@@ -11,10 +11,5 @@ server {
   location / {
     set $actual_budget_upstream http://actual-budget.default.svc.cluster.local;
     proxy_pass $actual_budget_upstream;
-
-
-    include authentik-location.conf;
   }
-
-  include authentik-proxy.conf;
 }
