--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -104,3 +104,5 @@ jobs:
           k8s_grafana_oauth_client_id: ${{ secrets.K8S_GRAFANA_OAUTH_CLIENT_ID }}
           k8s_grafana_oauth_client_secret: ${{ secrets.K8S_GRAFANA_OAUTH_CLIENT_SECRET }}
           k8s_cloudflare_api_token: ${{ secrets.K8S_CLOUDFLARE_API_TOKEN }}
+          k8s_mealie_oidc_clientid: ${{ secrets.K8S_MEALIE_OIDC_CLIENTID }}
+          k8s_mealie_oidc_clientsecret: ${{ secrets.K8S_MEALIE_OIDC_CLIENTSECRET }}
