--- a/helmcharts/core/config/nginx/conf.d/food.conf
+++ b/helmcharts/core/config/nginx/conf.d/food.conf
@@ -9,6 +9,12 @@ server {
   client_max_body_size 0;
 
   location / {
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $http_host;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header X-Real-IP $remote_addr;
+
     set $mealie_upstream http://mealie.default.svc.cluster.local;
     proxy_pass $mealie_upstream;
   }
